Fix layout issue on details page

--- a/app/assets/stylesheets/details.scss
+++ b/app/assets/stylesheets/details.scss
@@ -3,7 +3,6 @@ $break-med: 1288px;
 
 .details,
 .container.details {
-  max-width: 650px;
   margin-bottom: 60px;
 
   h1 {
